--- a/index.html
+++ b/index.html
@@ -37,23 +37,66 @@
         <div class="cards-wrapper center">
           <div class="card">
             <h2 class="car-name">Car Name</h2>
+            <div class="p1">
+              <h1 class="p1-h">About the Car</h1>
+              <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui pariatur error reprehenderit asperiores inventore, corrupti excepturi adipisci, amet illum consequuntur ipsa non incidunt nemo consectetur tempore iusto! Qui modi ipsa accusantium dolore rem libero, architecto ad aliquam velit id iure.</p>
             <img src="images/car-1.jpg" class="card-img" />
+            </div>
             <h3 class="car-price">$ 200,000</h3>
             <button type="button" class="card-btn">See More</button>
           </div>
           <div class="card">
             <h2 class="car-name">Car Name</h2>
+            <div class="p1">
+              <h1 class="p1-h">About the Car</h1>
+              <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui pariatur error reprehenderit asperiores inventore, corrupti excepturi adipisci, amet illum consequuntur ipsa non incidunt nemo consectetur tempore iusto! Qui modi ipsa accusantium dolore rem libero, architecto ad aliquam velit id iure.</p>
             <img src="images/car-2.jpg" class="card-img" />
+            </div>
             <h3 class="car-price">$ 100,000</h3>
             <button type="button" class="card-btn">See More</button>
           </div>
           <div class="card">
             <h2 class="car-name">Car Name</h2>
+            <div class="p1">
+              <h1 class="p1-h">About the Car</h1>
+              <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui pariatur error reprehenderit asperiores inventore, corrupti excepturi adipisci, amet illum consequuntur ipsa non incidunt nemo consectetur tempore iusto! Qui modi ipsa accusantium dolore rem libero, architecto ad aliquam velit id iure.</p>
             <img src="images/car-3.jpg" class="card-img" />
+            </div>
+            <h3 class="car-price">$ 150,000</h3>
+            <button type="button" class="card-btn">See More</button>
+          </div>
+          <div class="card c2">
+            <h2 class="car-name">Car Name</h2>
+            <div class="p1">
+              <h1 class="p1-h">About the Car</h1>
+              <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui pariatur error reprehenderit asperiores inventore, corrupti excepturi adipisci, amet illum consequuntur ipsa non incidunt nemo consectetur tempore iusto! Qui modi ipsa accusantium dolore rem libero, architecto ad aliquam velit id iure.</p>
+            <img src="images/car1.jpeg" class="card-img" />
+            </div>
+            <h3 class="car-price">$ 150,000</h3>
+            <button type="button" class="card-btn">See More</button>
+          </div>
+          <div class="card c2">
+            <h2 class="car-name">Car Name</h2>
+            <div class="p1">
+              <h1 class="p1-h">About the Car</h1>
+              <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui pariatur error reprehenderit asperiores inventore, corrupti excepturi adipisci, amet illum consequuntur ipsa non incidunt nemo consectetur tempore iusto! Qui modi ipsa accusantium dolore rem libero, architecto ad aliquam velit id iure.</p>
+            <img src="images/car2.jpeg" class="card-img" />
+            </div>
+            <h3 class="car-price">$ 150,000</h3>
+            <button type="button" class="card-btn">See More</button>
+          </div>
+          <div class="card c2">
+            <h2 class="car-name">Car Name</h2>
+            <div class="p1">
+              <h1 class="p1-h">About the Car</h1>
+              <p class="p2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui pariatur error reprehenderit asperiores inventore, corrupti excepturi adipisci, amet illum consequuntur ipsa non incidunt nemo consectetur tempore iusto! Qui modi ipsa accusantium dolore rem libero, architecto ad aliquam velit id iure.</p>
+            <img src="images/car3.jpeg" class="card-img" />
+            </div>
             <h3 class="car-price">$ 150,000</h3>
             <button type="button" class="card-btn">See More</button>
           </div>
         </div>
+            
       </section>
     </div>
 
@@ -87,6 +130,12 @@
           <img src="images/gallery-car-4.jpg" class="gallery-img-1" />
           <img src="images/gallery-car-5.jpg" class="gallery-img-2" />
           <img src="images/gallery-car-6.jpg" class="gallery-img-3" />
+        </div>
+        <div class="gallery center">
+          <div class="gallery-shelf"></div>
+          <img src="images/car1.jpeg"class="gallery-img-1" />
+          <img src="images/car2.jpeg" class="gallery-img-2" />
+          <img src="images/car3.jpeg" class="gallery-img-3" />
         </div>
       </section>
     </div>
